--- a/pages/projects.html
+++ b/pages/projects.html
@@ -123,7 +123,7 @@
           <head>
             <style>
               p {
-                font-color: black;
+                color: black;
                 text-align: left;
                 letter-spacing: 0.015em;
                 word-spacing: 0.001em;
