--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <title>Don Lim | Portfolio</title>
   <link rel="icon" href="photos/me.jpg" type="image/x-icon" />
   <meta property="og:locale" content="en-US">
@@ -82,7 +82,8 @@
             <div class="navicon"></div>
           </button>
           <ul class="visible-links">
-            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a></li>
+            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
+            </li>
             <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
             <li class="masthead__menu-item"><a href="pages/projects.html">Projects</a></li>
             <li class="masthead__menu-item"><a href="pages/coursework.html">Coursework</a></li>
@@ -101,15 +102,16 @@
         </div>
         <div class="author__content">
           <h3 class="author__name">Don Lim</h3>
-          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data Visualization</p>
+          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data
+            Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
           <ul class="author__urls social-icons">
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
-                  aria-hidden="true"></i> CV/Resume</a></li>
+            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
+                  class="fa fa-fw fa-file-pdf" aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
       </div>
@@ -145,22 +147,23 @@
             </style>
           </head>
           <h2>About Me</h2>
-          <p><br /> I am an IT professional with a background in causal inference and economics. Currently, I am interested in machine learning and data modeling, visualization, and prediction. <br />
+          <p><br /> I am an IT professional with a background in causal inference and economics. Currently, I am
+            interested in machine learning and data modeling, visualization, and prediction. <br />
             <h2>Education</h2><br />
             <b>M.S. Agricultural and Applied Economics</b><br />
             <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
-            <a href="https://www.depts.ttu.edu/aaec/"
-            target="_blank" rel="noopener noreferrer">Department of Agricultural and Applied Economics</a
-                  > <br />
+            <a href="https://www.depts.ttu.edu/aaec/" target="_blank" rel="noopener noreferrer">Department of
+              Agricultural and Applied Economics</a> <br />
             Lubbock, Texas<br /><br />
             <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
-            <a href="https://www.cevroinstitut.cz/en/" target="_blank" rel="noopener noreferrer">Cevro Institute</a><br />
+            <a href="https://www.cevroinstitut.cz/en/" target="_blank" rel="noopener noreferrer">Cevro
+              Institute</a><br />
             School of Political Studies <br />
             Prague, Czech Republic<br /><br />
-            <b>B.A. General Studies (Political Science, Philosophy, History) </b
-            ><br />
+            <b>B.A. General Studies (Political Science, Philosophy, History) </b><br />
             <a href="https://umich.edu/" target="_blank" rel="noopener noreferrer">University of Michigan</a><br />
-            <a href="https://lsa.umich.edu/" target="_blank" rel="noopener noreferrer">College of Literature, Science and the Arts</a> <br />
+            <a href="https://lsa.umich.edu/" target="_blank" rel="noopener noreferrer">College of Literature, Science
+              and the Arts</a> <br />
             Ann Arbor, Michigan
           </p>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
@@ -220,7 +223,8 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
-          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
           </li>
           <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
@@ -246,4 +250,5 @@
   </script>
   <script src="js/scroll.js"></script>
 </body>
+
 </html>
