--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <title>Don Lim | Certifications</title>
   <link rel="icon" href="../photos/me.jpg" type="image/x-icon" />
   <meta property="og:locale" content="en-US">
@@ -82,7 +82,8 @@
             <div class="navicon"></div>
           </button>
           <ul class="visible-links">
-            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a></li>
+            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
+            </li>
             <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
             <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
             <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
@@ -101,15 +102,16 @@
         </div>
         <div class="author__content">
           <h2 class="author__name">Don Lim</h2>
-          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data Visualization</p>
+          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data
+            Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
           <ul class="author__urls social-icons">
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
-                  aria-hidden="true"></i> CV/Resume</a></li>
+            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
+                  class="fa fa-fw fa-file-pdf" aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
       </div>
@@ -144,31 +146,47 @@
               }
             </style>
           </head>
-          <p><h2>Python</h2><ul>
-            <li>Sep 2022 - Introduction to Data Science in Python (<a href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU" target="_blank" rel="noopener noreferrer">UHKNPYG352ZU</a>)</li>
-            <li>Oct 2022 - Applied Plotting, Charting & Data Representation in Python (<a href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8" target="_blank" rel="noopener noreferrer">MR6CRKMGMLF8</a>)</li>
-            <li>Nov 2022 - Applied Machine Learning in Python (<a href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN" target="_blank" rel="noopener noreferrer">V6RMP4DBA5XN</a>)</li>
-            <li>Dec 2022 - Applied Text Mining in Python (<a href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W" target="_blank" rel="noopener noreferrer">WXVAJP7YR94W</a>)</li>
-          </ul></p>
-          <p><h2>SQL</h2><ul>
-            <li>Dec 2021 - Introduction to Structured Query Language (SQL) (<a href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD" target="_blank" rel="noopener noreferrer">GA25HJ4B4XRD</a>)</li>
+          <h2>Python</h2>
+          <ul>
+            <li>Sep 2022 - Introduction to Data Science in Python (<a
+                href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU" target="_blank"
+                rel="noopener noreferrer">UHKNPYG352ZU</a>)</li>
+            <li>Oct 2022 - Applied Plotting, Charting & Data Representation in Python (<a
+                href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8" target="_blank"
+                rel="noopener noreferrer">MR6CRKMGMLF8</a>)</li>
+            <li>Nov 2022 - Applied Machine Learning in Python (<a
+                href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN" target="_blank"
+                rel="noopener noreferrer">V6RMP4DBA5XN</a>)</li>
+            <li>Dec 2022 - Applied Text Mining in Python (<a
+                href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W" target="_blank"
+                rel="noopener noreferrer">WXVAJP7YR94W</a>)</li>
           </ul>
           </p>
-          <p><h2>Laserfiche</h2></p><ul>
-            <li>Jun 2022 - <a href="../certs/LF_gold.pdf" target="_blank" rel="noopener noreferrer">Gold</a> </li>
-            <li>Oct 20022 - <a href="../certs/LF_plat.pdf" target="_blank" rel="noopener noreferrer">Platinum</a></li>
-          </ul>
-          <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
-          <script>
-            ga('require', 'ipMeta', {
-              serviceProvider: 'dimension1',
-              networkDomain: 'dimension2',
-              networkType: 'dimension3',
-            });
-            ga('ipMeta:loadNetworkFields');
-            ga('send', 'pageview');
-          </script> <!-- IpMeta must be included after Google Analytics -->
-          <script async="" src="../ipmeta.io/plugin.js"></script>
+          <p>
+            <h2>SQL</h2>
+            <ul>
+              <li>Dec 2021 - Introduction to Structured Query Language (SQL) (<a
+                  href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD" target="_blank"
+                  rel="noopener noreferrer">GA25HJ4B4XRD</a>)</li>
+            </ul>
+            <p>
+              <h2>Laserfiche</h2>
+            </p>
+            <ul>
+              <li>Jun 2022 - <a href="../certs/LF_gold.pdf" target="_blank" rel="noopener noreferrer">Gold</a> </li>
+              <li>Oct 20022 - <a href="../certs/LF_plat.pdf" target="_blank" rel="noopener noreferrer">Platinum</a></li>
+            </ul>
+            <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
+            <script>
+              ga('require', 'ipMeta', {
+                serviceProvider: 'dimension1',
+                networkDomain: 'dimension2',
+                networkType: 'dimension3',
+              });
+              ga('ipMeta:loadNetworkFields');
+              ga('send', 'pageview');
+            </script> <!-- IpMeta must be included after Google Analytics -->
+            <script async="" src="../ipmeta.io/plugin.js"></script>
         </section>
         <footer class="page__meta"></footer>
       </div>
@@ -215,7 +233,8 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
-          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
           </li>
           <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
