--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <title>Don Lim | Projects</title>
   <link rel="icon" href="../photos/me.jpg" type="image/x-icon" />
   <meta property="og:locale" content="en-US">
@@ -82,7 +82,8 @@
             <div class="navicon"></div>
           </button>
           <ul class="visible-links">
-            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a></li>
+            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
+            </li>
             <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
             <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
             <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
@@ -101,15 +102,16 @@
         </div>
         <div class="author__content">
           <h2 class="author__name">Don Lim</h2>
-          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data Visualization</p>
+          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data
+            Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
           <ul class="author__urls social-icons">
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i>Email</a></li>
-            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
-                  aria-hidden="true"></i>CV/Resume</a></li>
+            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
+                  class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>CV/Resume</a></li>
           </ul>
         </div>
       </div>
@@ -145,17 +147,23 @@
             </style>
           </head>
           <h2>Projects</h2> <br />
-            <h3>Master's thesis submitted in partial requirement at the CEVRO Institute</h3> <br />
-            <a href="research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
-              aria-hidden="true"></i>An Institutional Analysis on Open Source: How Developers
-              Use Knowledge and Entrepreneurship in Communities</a><br /> <br />
-            <h3>Professional paper submitted in partial requirement at Texas Tech University</h3> <br />
-            <a href="../research/fbdg/FBDG_final.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Low-Fat Diet on Global Health Outcomes&#8212A Two-Stage
-              Difference-in-Difference</a> <ul>
-                <li><a href="../research/fbdg/presentation.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Presentation</a> </li>
-                <li>Data cleaning code [<a href="../research/fbdg/data_clean.Rmd" target="_blank" rel="noopener noreferrer">R</a>]</li>
-              </ul>
-           <br /></p>
+          <h3>Master's thesis submitted in partial requirement at the CEVRO Institute</h3> <br />
+          <a href="research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i
+              class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>An Institutional Analysis on Open Source: How
+            Developers
+            Use Knowledge and Entrepreneurship in Communities</a><br /> <br />
+          <h3>Professional paper submitted in partial requirement at Texas Tech University</h3> <br />
+          <a href="../research/fbdg/FBDG_final.pdf" target="_blank" rel="noopener noreferrer"><i
+              class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Low-Fat Diet on Global Health Outcomes&#8212A
+            Two-Stage
+            Difference-in-Difference</a>
+          <ul>
+            <li><a href="../research/fbdg/presentation.pdf" target="_blank" rel="noopener noreferrer"><i
+                  class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Presentation</a> </li>
+            <li>Data cleaning code [<a href="../research/fbdg/data_clean.Rmd" target="_blank"
+                rel="noopener noreferrer">R</a>]</li>
+          </ul>
+          <br /></p>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
@@ -213,9 +221,11 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
-          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
           </li>
-          <li><a href="https://github.com/donlim93" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
+          <li><a href="https://github.com/donlim93" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
       </div>
