--- a/pages/samples.html
+++ b/pages/samples.html
@@ -110,8 +110,8 @@
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i> 806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
-                  aria-hidden="true"></i> CV/Resume</a></li>
+            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
+                  class="fa fa-fw fa-file-pdf" aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
       </div>
@@ -146,45 +146,60 @@
               }
             </style>
           </head>
-          <p>
-            <h2>R</h2>
-            <ul>
-              <li>
-                The World Bank - <a
-                  href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility" target="_blank" rel="noopener noreferrer">Global
-                  Database on Intergenerational Mobility</a> (GDIM) - [<a href="../sample/Data-sample.html"
-                  target="_blank" rel="noopener noreferrer">R</a>] <ul>
-                  <li>Clustering</li>
-                  <li>Choropleth graph</li>
-                  <li>Initial OLS</li>
-            </ul>
-              </li>
-              <li>
-                <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II" target="_blank" rel="noopener noreferrer">Retail Data Set II</a> Online
-                from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a
-                  href="../sample/RFM_sample.html" target="_blank" rel="noopener noreferrer">R</a>] <ul>
-                  <li>RFM analysis</li>
-                  <li>Segmentation</li>
-                  <li>Clustering</li>
-                  <li>Retention and lifetime value analysis</li>
-                </ul>
-              </li>
-            </ul> <br />
-            <h2>Python (from Coursera certifications)</h2>
-            <ul>
-              <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.html" target="_blank" rel="noopener noreferrer">Simple regex</a></li>
-              <h3></h3>
-              <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 2/assignment2.html" target="_blank" rel="noopener noreferrer">Simple data cleaning and analysis</a></li>
-              <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 3/assignment3.html" target="_blank" rel="noopener noreferrer">Data analysis of renewable energy indicators</a></li>
-              <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 4/assignment4.html" target="_blank" rel="noopener noreferrer">Correlation (pearsonr) of win/loss rate with population from the MLB, NBA, and NHL</a></li>
-              <li><a href="../python/Coursera/2 Data Representation/Week 2/Assignment/Assignment2.html" target="_blank" rel="noopener noreferrer">Visualization of record-breaking high and low temperatures in Ann Arbor on 2015 (range from 2005-2014)</a></li>
-              <li><a href="../python/Coursera/3 Applied Machine Learning/Week 1/Assignment/Assignment+1.html" target="_blank" rel="noopener noreferrer">Training KNN classifier on breast cancer dataset from sklearn</a></li>
-              <li><a href="../python/Coursera/3 Applied Machine Learning/Week 2/Assignment/Assignment+2.html" target="_blank" rel="noopener noreferrer">Training decision tree, SVC, linear, and Lasso classifiers on the UCI Mushroom dataset</a> (<a href="http://archive.ics.uci.edu/ml/datasets/Mushroom?ref=datanews.io" target="_blank" rel="noopener noreferrer">Link</a>)</li>
-              <li><a href="../python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.html">Training dummy and SBC classifiers on fraud data</a></li>
-              <li><a href="../python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.html">Training random forest classifier to predict blight ticket violations</a></li>
-              <li><a href="../python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.html">Cleaning and sorting datetimes</a></li>
-            </ul>
-          </p>
+          <h2>R</h2>
+          <ul>
+            <li>
+              The World Bank - <a
+                href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility"
+                target="_blank" rel="noopener noreferrer">Global
+                Database on Intergenerational Mobility</a> (GDIM) - [<a href="../sample/Data-sample.html"
+                target="_blank" rel="noopener noreferrer">R</a>] <ul>
+                <li>Clustering</li>
+                <li>Choropleth graph</li>
+                <li>Initial OLS</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II" target="_blank"
+                rel="noopener noreferrer">Retail Data Set II</a> Online
+              from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a
+                href="../sample/RFM_sample.html" target="_blank" rel="noopener noreferrer">R</a>] <ul>
+                <li>RFM analysis</li>
+                <li>Segmentation</li>
+                <li>Clustering</li>
+                <li>Retention and lifetime value analysis</li>
+              </ul>
+            </li>
+          </ul> <br />
+          <h2>Python (from Coursera certifications)</h2>
+          <ul>
+            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.html"
+                target="_blank" rel="noopener noreferrer">Simple regex</a></li>
+            <h3></h3>
+            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 2/assignment2.html"
+                target="_blank" rel="noopener noreferrer">Simple data cleaning and analysis</a></li>
+            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 3/assignment3.html"
+                target="_blank" rel="noopener noreferrer">Data analysis of renewable energy indicators</a></li>
+            <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 4/assignment4.html"
+                target="_blank" rel="noopener noreferrer">Correlation (pearsonr) of win/loss rate with population from
+                the MLB, NBA, and NHL</a></li>
+            <li><a href="../python/Coursera/2 Data Representation/Week 2/Assignment/Assignment2.html" target="_blank"
+                rel="noopener noreferrer">Visualization of record-breaking high and low temperatures in Ann Arbor on
+                2015 (range from 2005-2014)</a></li>
+            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 1/Assignment/Assignment+1.html"
+                target="_blank" rel="noopener noreferrer">Training KNN classifier on breast cancer dataset from
+                sklearn</a></li>
+            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 2/Assignment/Assignment+2.html"
+                target="_blank" rel="noopener noreferrer">Training decision tree, SVC, linear, and Lasso classifiers on
+                the UCI Mushroom dataset</a> (<a href="http://archive.ics.uci.edu/ml/datasets/Mushroom?ref=datanews.io"
+                target="_blank" rel="noopener noreferrer">Link</a>)</li>
+            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.html">Training
+                dummy and SBC classifiers on fraud data</a></li>
+            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.html">Training
+                random forest classifier to predict blight ticket violations</a></li>
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.html">Cleaning and
+                sorting datetimes</a></li>
+          </ul>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
@@ -241,10 +256,12 @@
       </script>
       <div class="page__footer-follow">
         <ul class="social-icons">
-          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
           </li>
           <li><strong>Follow:</strong></li>
-          <li><a href="http://github.com/donlim93" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
+          <li><a href="http://github.com/donlim93" target="_blank" rel="noopener noreferrer"><i
+                class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
       </div>
