--- a/pages/samples.html
+++ b/pages/samples.html
@@ -199,6 +199,9 @@
                 random forest classifier to predict blight ticket violations</a></li>
             <li><a href="../python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.html">Cleaning and
                 sorting datetimes</a></li>
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 2/Assignment/Assignment+2.html">Text parsing, lemmatization, and spell-checking of Moby Dick</a></li>
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 3/Assignment/Assignment+3.html">Machine learning using logistic regression and count vectorizer to predict spam messages</a></li>
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 4/Assignment+4.html">Machine learning to compare similarities between documents and assigning them the correct topics</a></li>
           </ul>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
